--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -1,6 +1,6 @@
 /*
-*	 Author: beshleyua
-*	 Author URL: http://themeforest.net/user/beshleyua
+*   Author: Mohtasm Mohamed
+*   Author URL: https://www.facebook.com/mohtasm.sawilh
 */
 
 /* TABLE OF CONTENTS
